# lcmandrada.github.io

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
blog/: index.html
docs/: celery.md  core.md  flask.md  requests.md
docs/notes/: code-problems.md  commands.md  container.md  css.md  html.md  java.md  javascript.md  mongodb.md  nodejs.md  programming.md  python.md  sql.md  tools.md  web-development.md
docs/python/: click.md  concept.md  library.md  snippets.md
docs/stylesheets/: extra.css
notes/code-problems/: index.html
notes/commands/: index.html
notes/container/: index.html
notes/css/: index.html
notes/html/: index.html
notes/java/: index.html
notes/javascript/: index.html
notes/mongodb/: index.html
notes/nodejs/: index.html
notes/programming/: index.html
notes/python/: index.html
notes/sql/: index.html
notes/tools/: index.html
notes/web-development/: index.html
python/celery/: index.html
python/click/: index.html
python/concept/: index.html
python/flask/: index.html
python/requests/: index.html
python/snippets/: index.html
search/: search_index.json
