[tool.poetry]
name = "lcmandrada.github.io"
version = "0.1.0"
description = ""
authors = ["Luke Clark Andrada <lcmandrada@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "9.2.0b3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
